# libtool-build2

./: CHANGELOG.md  README.md  build.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/imgui/il2cpp/tool/: GlViewWrapper.java  MainActivity.java  NativeMethods.java
app/src/main/jni/: CMakeLists.txt  Main.cpp
app/src/main/jni/Frida/gumpp/: gumpp-static.vcxproj  gumpp.vcxproj
app/src/main/jni/Il2cpp/: Il2cpp.cpp  Il2cpp.h  il2cpp-class.cpp
app/src/main/jni/Includes/: Logger.h  Utils.cpp
app/src/main/jni/Menu/: ImGui.cpp  ImGui.h
app/src/main/jni/Tool/: ClassesTab.cpp  ClassesTab.h  Frida.cpp  Frida.h  Patcher.cpp  Patcher.h  PopUpSelector.h  Tool.cpp  Tool.h  Unity.cpp  Unity.h  Util.cpp  Util.h
app/src/main/jni/imgui/: CMakeLists.txt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
